--- a/gb/16/11/5/n8462382.md
+++ b/gb/16/11/5/n8462382.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/duaswr3254/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/duaswr3254/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/duaswr3254/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/duaswr3254/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/duaswr3254/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/duaswr3254/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/duaswr3254/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/duaswr3254/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/duaswr3254/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/duaswr3254/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/duaswr3254/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/duaswr3254/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/duaswr3254/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/duaswr3254/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/duaswr3254/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/duaswr3254/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/duaswr3254/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/duaswr3254/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/duaswr3254/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/duaswr3254/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/duaswr3254/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/duaswr3254/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/duaswr3254/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/duaswr3254/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台湾小吃咸酥鸡摊必点前10名 甜不辣夺冠</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年11月05日讯】<ahref="https://github.com/duaswr3254/djy/blob/master/gb/tag/%E5%92%B8%E9%85%A5%E9%B8%A1.md#1">咸酥鸡</a>始终是台湾学子不可或缺的“一味”，根据社群网站“Dcard”统计票选，咸酥鸡最热门必点的品项由<ahref="https://github.com/duaswr3254/djy/blob/master/gb/tag/%E7%94%9C%E4%B8%8D%E8%BE%A3.md#1">甜不辣</a>夺冠，<ahref="https://github.com/duaswr3254/djy/blob/master/gb/tag/%E8%B1%86%E8%85%90.md#1">豆腐</a>类紧接在后。</p>
-<p>据中央社报导，“说到<ahref="https://github.com/duaswr3254/djy/blob/master/gb/tag/%E5%92%B8%E9%85%A5%E9%B8%A1.md#1">咸酥鸡</a>店，每个人家附近都有着那间最爱的咸酥鸡店，陪着自己长大的那间”，根据“OpView社群口碑资料库”探索热门点心讨论文章，发现专为大学生设计的社群网站“Dcard”上发起的一则咸酥鸡摊<ahref="https://github.com/duaswr3254/djy/blob/master/gb/tag/%E7%BE%8E%E9%A3%9F.md#1">美食</a>调查，短短不到3天吸引了近千人响应回答。</p>
-<p>除了必点的咸酥鸡外，其他配料声量最高者为“<ahref="https://github.com/duaswr3254/djy/blob/master/gb/tag/%E7%94%9C%E4%B8%8D%E8%BE%A3.md#1">甜不辣</a>”，有网友就直言：“必点甜不辣，炸的脆脆超好吃”，更有民众说：“我超爱炸的膨膨的甜不辣耶！没有膨的我反而不爱”。不过，用鱼浆做成的甜不辣，虽然热量不算高，单片约37大卡，但只要一次吃8片，热量就等于1碗白饭；若是15条小条的甜不辣，热量等同一个卤鸡腿便当。</p>
-<figure id="attachment_8462474" aria-describedby="caption-attachment-8462474" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/11/1611050137242378.jpg"><img class="wp-image-8462474 size-medium" title="台湾小吃咸酥鸡摊必点前10名 甜不辣夺冠" src="https://i.epochtimes.com/assets/uploads/2016/11/1611050137242378-450x338.jpg" alt="台湾小吃咸酥鸡摊必点前10名 甜不辣夺冠" width="450" b="338" /></a><figcaption id="caption-attachment-8462474" class="wp-caption-text">根据社群网站《Dcard》统计票选，咸酥鸡最热门必点的品项由甜不辣夺冠，<ahref="https://github.com/duaswr3254/djy/blob/master/gb/tag/%E8%B1%86%E8%85%90.md#1">豆腐</a>类紧接在后。（中央社）</figcaption></figure>
+<p>【大纪元2016年11月05日讯】<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%92%B8%E9%85%A5%E9%B8%A1.md#1">咸酥鸡</a>始终是台湾学子不可或缺的“一味”，根据社群网站“Dcard”统计票选，咸酥鸡最热门必点的品项由<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%9C%E4%B8%8D%E8%BE%A3.md#1">甜不辣</a>夺冠，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B1%86%E8%85%90.md#1">豆腐</a>类紧接在后。</p>
+<p>据中央社报导，“说到<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%92%B8%E9%85%A5%E9%B8%A1.md#1">咸酥鸡</a>店，每个人家附近都有着那间最爱的咸酥鸡店，陪着自己长大的那间”，根据“OpView社群口碑资料库”探索热门点心讨论文章，发现专为大学生设计的社群网站“Dcard”上发起的一则咸酥鸡摊<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E9%A3%9F.md#1">美食</a>调查，短短不到3天吸引了近千人响应回答。</p>
+<p>除了必点的咸酥鸡外，其他配料声量最高者为“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%94%9C%E4%B8%8D%E8%BE%A3.md#1">甜不辣</a>”，有网友就直言：“必点甜不辣，炸的脆脆超好吃”，更有民众说：“我超爱炸的膨膨的甜不辣耶！没有膨的我反而不爱”。不过，用鱼浆做成的甜不辣，虽然热量不算高，单片约37大卡，但只要一次吃8片，热量就等于1碗白饭；若是15条小条的甜不辣，热量等同一个卤鸡腿便当。</p>
+<figure id="attachment_8462474" aria-describedby="caption-attachment-8462474" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/11/1611050137242378.jpg"><img class="wp-image-8462474 size-medium" title="台湾小吃咸酥鸡摊必点前10名 甜不辣夺冠" src="https://i.epochtimes.com/assets/uploads/2016/11/1611050137242378-450x338.jpg" alt="台湾小吃咸酥鸡摊必点前10名 甜不辣夺冠" width="450" b="338" /></a><figcaption id="caption-attachment-8462474" class="wp-caption-text">根据社群网站《Dcard》统计票选，咸酥鸡最热门必点的品项由甜不辣夺冠，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B1%86%E8%85%90.md#1">豆腐</a>类紧接在后。（中央社）</figcaption></figure>
 <p>第二名为豆腐类，其中六成的人偏爱百页豆腐，因其外酥内软、便宜好吃CP值高，四成则喜欢鸡蛋豆腐。紧追在后的则是“鱿鱼”，虽然高人气，但也有人说担心吃到口感很难咬的。鸡皮、薯条及米血也是热门品项。</p>
 <p>蔬菜类则以“四季豆”最受大众青睐，有网友笑称小时侯妈妈还会特地交待他“要点四季豆香菇那些蔬菜类的，这样有菜比较健康”，但网友心里却OS“妈……从我踏进这间店，就注定不健康了”。</p>
 <figure id="attachment_8462435" aria-describedby="caption-attachment-8462435" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/11/1611050102222378.jpg"><img class="wp-image-8462435 size-medium" title="台湾小吃咸酥鸡摊必点前10名 甜不辣夺冠" src="https://i.epochtimes.com/assets/uploads/2016/11/1611050102222378-450x338.jpg" alt="台湾小吃咸酥鸡摊必点前10名 甜不辣夺冠" width="450" b="338" /></a><figcaption id="caption-attachment-8462435" class="wp-caption-text">根据社群网站《Dcard》统计票选，咸酥鸡最热门必点的品项由甜不辣夺冠，豆腐类紧接在后。（社群网站Dcard）</figcaption></figure>
@@ -20,47 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/13/11/1/n4000810.md#1">李承泰发片 王彩桦学炸咸酥鸡</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/16/10/23/n8424748.md#1">安心亚演戏发片忙昏头 张轩睿献咸酥鸡慰劳</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/9/n12869500.md#1">东港溪供应高雄民生用水 台水：确保可食用</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/9/n12869534.md#1">免跑户所 台即日起可线上申办出生登记</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/8/n12867133.md#1">台有汽车驾照者报考机车 5/3起须笔试</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/7/n12864284.md#1">陈清流研发新专利 钢琴音色大突破</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/7/n12864152.md#1">滥用药物 39岁以下族群逾9成</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/6/n12861525.md#1">“Yahoo 奇摩知识+”5/4终止服务</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/6/n12861424.md#1">最鲜海之味！屏东东港天亮前热闹鲔鱼拍卖</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/4/n12857049.md#1">台湾阿里山樱花季 清明连假游客涌入</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/1/n4000810.md#1">李承泰发片 王彩桦学炸咸酥鸡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/10/23/n8424748.md#1">安心亚演戏发片忙昏头 张轩睿献咸酥鸡慰劳</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678851.md#1">台使用牌照税开征 受疫情影响者可申请延缴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672774.md#1">民众提案恢复红黄线违停检举 台交通部：暂不参采</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672905.md#1">台麦当劳、家乐福响应减碳 今关招牌灯1小时</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13671966.md#1">你中奖了吗？111年1-2月统一发票兑奖资讯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13670260.md#1">台预售屋大稽查 57建案有40个违规</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13670066.md#1">疫情下育儿困境 调查：玩3C比率上升至19%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13670074.md#1">台健保投保上限拟调高 最快5月上路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/23/n13667886.md#1">生物防治省钱护水质 环署将在石门、翡翠水库推广</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10835148.md#1" target="_blank">中华传统文化之叹——消逝的城墙（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/17/n11874645.md#1" target="_blank">王友群：习近平的父亲被栽赃陷害16年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11256153.md#1" target="_blank">留守女孩的命运转变</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/4/n12857839.md#1">杨威：三星堆新发现 冲击进化论无神论</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/3/29/n12844310.md#1">金言：改写历史？三星堆掀文明起源争论</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/1/n12852292.md#1">【未解之谜】史前杰作？月亮七大谜团（下）</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/3/n12856808.md#1">【小宇宙传说】人体能量场的奥秘</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/6/n12861114.md#1">自称死过三次 女网红：人死后时间变得很慢</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/8/n12867897.md#1">【秦鹏直播】北斗黑幕害死人 曝定位致命缺陷</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/9/n12870442.md#1">【秦鹏直播】蓬佩奥加盟福克斯 美国欧盟抗中共</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/8/n12867405.md#1">【未解之谜】远古科技：20亿年前核反应堆</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/8/n12867135.md#1">北斗定位涉人命 官媒甩锅引众怒 专家揭真相</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/8/n12867499.md#1">土耳其中使馆咆哮后 门前被挖大坑 民众称快</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/8/n12867328.md#1">卫健委通知有猫腻？知情人揭中共疫苗秘密</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/8/n12867529.md#1">全昭旻无惧中共小粉红狙击 35岁生日晒Nike鞋</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/7/n12862621.md#1">当爸后被吐槽身材发福 吴奇隆瘦身近照曝光</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/8/n12867670.md#1">自曝遭刘嘉玲删微信好友 杨颖解释缘由引热议</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/8/n12865432.md#1">赵又廷片场探班高圆圆 两人手拉手聊天超甜蜜</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/8/n12867956.md#1">拍杂志封面 范冰冰诠释三个不同年龄层容貌</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/6/n12861228.md#1">维生素B群白天提神 晚上助眠 营养师教你这样吃</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/2/n12853238.md#1">跳绳减肥比健走慢跑都好 还防骨松 教你正确做</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/4/n12858173.md#1">三高过敏等10种人 能打新冠疫苗吗？2类人不能打</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/3/31/n12849517.md#1">免疫力是最好的药 抗病毒抗菌秘密就在你体内</a></li>
-<li><a href="https://github.com/duaswr3254/djy/blob/master/gb/21/4/7/n12863360.md#1">NASA在火星上拍到彩虹高挂天空？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/duaswr3254/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/duaswr3254/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/5/n8462382.htm">台湾小吃咸酥鸡摊必点前10名 甜不辣夺冠</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/5/n8462382.htm">台湾小吃咸酥鸡摊必点前10名 甜不辣夺冠</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/duaswr3254/djy/blob/master/gb/16/11/5/n8462382.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/duaswr3254/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/duaswr3254/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/duaswr3254/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/duaswr3254/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/duaswr3254/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/11/5/n8462382.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
